updated mapify project status and fixed some table alignment issue

--- a/src/Components/Active_Projects/Active_Projects.css
+++ b/src/Components/Active_Projects/Active_Projects.css
@@ -65,6 +65,7 @@
 .summary {
   text-align: justify;
   color: #94a3b8;
+  white-space: pre-line;
 }
 
 .active-projects-card:hover .project-card {
