--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -24,6 +24,7 @@
     margin-top: 10px;
     margin-bottom: 20px;
     display: grid;
+    padding-left: 5px;
     grid-template-columns:1fr 1fr 1fr 1fr;
     /* width: fit-content; */
     
@@ -33,7 +34,16 @@
     flex-wrap: wrap;
     gap: 5px;
 }
+.not-live span{
+  width: 0;
+}
+
+
+
 .cell-item{
+
+  display: flex;
+  align-items: center;
     padding: 10px 0;
     border-bottom: 1px solid rgba(149, 151, 151, 0.37);
 }
